src/test/ui/rust-2021/future-prelude-collision-shadow.stderr
error[E0599]: no method named `try_into` found for type `u8` in the current scope
  --> $DIR/future-prelude-collision-shadow.rs:27:26
   |
LL |         let _: u32 = 3u8.try_into().unwrap();
   |                          ^^^^^^^^ method not found in `u8`
   |
  ::: $SRC_DIR/core/src/convert/mod.rs:LL:COL
   |
LL |     fn try_into(self) -> Result<T, Self::Error>;
   |        --------
   |        |
   |        the method is available for `Box<u8>` here
   |        the method is available for `Pin<u8>` here
   |        the method is available for `Arc<u8>` here
   |        the method is available for `Rc<u8>` here
   |
   = help: items from traits can only be used if the trait is in scope
   = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: consider wrapping the receiver expression with the appropriate type
   |
LL |         let _: u32 = Box::new(3u8).try_into().unwrap();
   |                      +++++++++   +
help: consider wrapping the receiver expression with the appropriate type
   |
LL |         let _: u32 = Pin::new(3u8).try_into().unwrap();
   |                      +++++++++   +
help: consider wrapping the receiver expression with the appropriate type
   |
LL |         let _: u32 = Arc::new(3u8).try_into().unwrap();
   |                      +++++++++   +
help: consider wrapping the receiver expression with the appropriate type
   |
LL |         let _: u32 = Rc::new(3u8).try_into().unwrap();
   |                      ++++++++   +
help: the following traits are implemented but not in scope; perhaps add a `use` for one of them:
   |
LL |     use crate::m::TryIntoU32;
   |
LL |     use std::convert::TryInto;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
